added repo info, scripts and dev dependencies

--- a/package.json
+++ b/package.json
@@ -3,7 +3,22 @@
   "version": "0.0.1",
   "description": "Edmunds Widgets API",
   "private": true,
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/EdmundsWidgets/com.edmunds.widgets.api.git"
+  },
+  "bugs": {
+    "url": "https://github.com/EdmundsWidgets/com.edmunds.widgets.api/issues"
+  },
   "scripts": {
-    "install": "bower install"
+    "install": "bower install",
+    "test": "grunt test"
+  },
+  "devDependencies": {
+    "grunt": "~0.4.2",
+    "grunt-contrib-jshint": "~0.7.2",
+    "grunt-contrib-qunit": "~0.3.0",
+    "grunt-contrib-watch": "~0.5.3",
+    "grunt-jsonlint": "~1.0.4"
   }
 }
